--- a/index.html
+++ b/index.html
@@ -159,11 +159,11 @@ body {
                     <hr>
                     <h5><b>Teleperformance USA - Senior Apple Advisor - Work From Home</b></h5>
                     <h6><i class="fa fa-calendar "></i><span> Jul 2017 - June 2019</span></h6>
-                    <p>Worked on troubleshooting software and hardware issues on iPhones, Macs, Apple Watches, Beats and accessories. Carefully followed Apple Internal Use Only articles. Worked with system folders and gained familarity on functions/features of listed Apple products. Reported new updates bugs and customer's complaints.</p>
+                    <p>Worked on troubleshooting software and hardware issues on iPhones, Macs, Apple Watches, Beats and accessories. Meticulously followed Apple Internal Use Only articles. Worked with system folders and gained familarity on functions/features of listed Apple products. Reported about new bugs and customer's complaints.</p>
                     <hr>
                     <h5><b>United Health Group - Web Developer - Short-Term IT Contract Job</b></h5>
                     <h6><i class="fa fa-calendar "></i> <span> Feb 2017 - May 2017</span></h6>
-                    <p>Worked under agile methodology on redesigning old website. Grabbed knowledge about real web development tasks, recreated assigned pages, tested SQL queries and worked with QA team. Learned about Spring framework, Stage/Production server & other web development/deployment tools. </p>
+                    <p>Worked under agile methodology on redesigning old website. Grabbed knowledge about real web development tasks, recreated assigned pages, tested SQL queries and worked with fellow developers & QA team. Learned about Spring framework, Stage/Production server & other Web development/deployment tools. </p>
                     <hr>
                     <h5><b>Support.com - Remote Services Technician - Work From Home</b></h5>
                     <h6><i class="fa fa-calendar "></i> Dec 2015 - Jan 2017</h6>
@@ -171,7 +171,7 @@ body {
                     <hr>
                     <h5><b>Academic Computer Center - University IT Support</b></h5>
                     <h6><i class="fa fa-calendar "></i> Nov 2007 - May 2009</h6>
-                    <p>Assisted in deployment, configuration of PCs, MACs, printers & scanners including software troubleshooting and updates. Assisted students on working with various Microsoft products. Taken classes on Adobe Photoshop & Illustrator. </p><br>
+                    <p>Assisted in deployment, configuration, software troubleshooting and updates of PCs, Macs, printers & scanners . Assisted students on working with various Microsoft products. Took classes on Adobe Photoshop & Illustrator. </p><br>
                     <h2><i class="fa fa-graduation-cap" style="color:  #5ABA5A"></i> Education</h2>
                     <hr>
                     <h5><b>Online Learning</b></h5>
