--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ body {
                     <hr>
                     <h5><b>Academic Computer Center - University IT Support</b></h5>
                     <h6><i class="fa fa-calendar "></i> Nov 2007 - May 2009</h6>
-                    <p>Assisted in deployment, configuration, software troubleshooting and updates of PCs, Macs, printers & scanners . Assisted students on working with various Microsoft products. Took classes on Adobe Photoshop & Illustrator. </p><br>
+                    <p>Assisted in deployment, configuration, software troubleshooting and updates of PCs, Macs, printers & scanners . Assisted students on working with various Microsoft products. Took training classes on Adobe Photoshop & Illustrator. </p><br>
                     <h2><i class="fa fa-graduation-cap" style="color:  #5ABA5A"></i> Education</h2>
                     <hr>
                     <h5><b>Online Learning</b></h5>
