--- a/index2.html
+++ b/index2.html
@@ -354,7 +354,7 @@
                                 </hgroup>
                                 <ul>
                                     <li>Working as an independent customer service contractor for Bath & Body Works.</li>
-                                    <li>Resolving post sales/accounts/post-sales issues.</li>
+                                    <li>Resolving sales/accounts/post-sales issues.</li>
                                     <li>Help customers order products on behalf of Bath & Body Works</li>
                                 </ul>
                             </article>
