--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ body {
                     <i class="fa fa-linkedin fa-stack-1x" style="color: #5ABA5A"></i>
                 </span></a>
             <p></p>
-            <p><b>A STONE</b> IS BROKEN BY THE LAST STROKE OF HAMMER.THIS DOESN'T MEAN THAT THE FIRST STROKE WAS USELESS. SUCCESS IS THE RESULT OF PERSISTENT EFFORT.</p>
+            <p>" Understanding a concept is like getting done with learning to ride a bicycle. After a decade, you might completely forget what your first bicycle looked like or how you aced it but you will never forget how to balance any bicycle that easily. " - Sachin Rajbhandari :)</p>
             <p>Thank you for your precious time !</p>
         </footer>
     </div>
