--- a/index2.html
+++ b/index2.html
@@ -223,8 +223,8 @@
 
 <body>
     <div style="outline:none" tabindex="-1" role="group">
-        <div id="page">
-            <main id="container">
+        <!-- <div id="page"> -->
+            <!-- <main id="container"> -->
                 <div id="myNav" class="overlay">
                     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                     <div class="overlay-content">
@@ -426,6 +426,13 @@
                                 </hgroup>
                                 <ul>
                                     <li>Information Technology (NOT A GRAD!)</li>
+                                </ul>
+                                <hgroup>
+                                    <h1>University of the People(UoPeople), Online</h1>
+                                    <p>Starting Apr 9, 2020</p>
+                                </hgroup>
+                                <ul>
+                                    <li>Computer Science</li>
                                 </ul>
                             </article>
                         </section>
