--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ body {
                     </span>
                     <b>Current Status</b>
                     <p></p>
-                    <p>Full Stack Course - App Academy BOOTCAMP</p>                  
+                    <p>Full Stack Course - Open App Academy</p>                 
                     <p>Targeting A Job with Good Project & Nice Pay &#128521;</p>
                     <hr><hr>
                     <!-- My Skills -->
@@ -132,25 +132,24 @@ body {
                     <p>English</p>
                     <p>Nepali</p>
                     <p>Hindi</p>
-                    <br> <br>
+                    <br><br>
                 </div>
                 <!-- End Left Column -->
             </div>
             <!-- Right Column -->
             <div class="col-sm-8">
                 <div class="well">
-                    <h2><i class="fa fa-cubes" style="color:  #5ABA5A"></i> Personal Projects</h2>
+                    <h2><i class="fa fa-cubes" style="color:  #5ABA5A"></i>Portfolio Hyperlinks</h2>
                     <hr>
-                    <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/index3.html" style="color:black">  Prototype for Django(RWD) [WEBSITE I]</a><br>
-                    <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/Learning_Grids/index.html" style="color:black"> Makeup Page for Spouse(RWD) [WEBSITE II]</a><br>
-                    <i class="fa fa-check-circle-o"></i><a href="http://linuxchats.com/" target="_blank" style="color:black"> Linux Chats(Wordpress as CMS) [WEBSITE III]</a><br>
-                    <i class="fa fa-check-circle-o"></i><a href="skeleton-test/index.html" target="_blank" style="color:black"> Collections/Reminders</a><br>
-                    <i class="fa fa-check-circle-o"></i><a style=" color: black;" href="howtohtmlcss.pdf" download> Personal Research - My Theory of Coding HTML & CSS [PDF Download] </a><br>
-                    <i class="fa fa-check-circle-o"></i><a href="https://github.com/sachinkrb?tab=repositories" target="_blank" style="color:black"> Github Account</a><br>
-                    <i class="fa fa-check-circle-o"></i><a href="http://resume.github.io/?sachinkrb" target="_blank" style="color:black"> Quick Summary of Github</a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/index3.html" style="color:black"> Website Prototype I</a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/Learning_Grids/index.html" style="color:black"> Website Prototype II</a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="http://linuxchats.com/" target="_blank" style="color:black"> Wordpress Website III</a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="skeleton-test/index.html" target="_blank" style="color:black"> Helpful Collection</a><br>
+                    <i class="fa fa-check-circle-o"></i><a style=" color: black;" href="howtohtmlcss.pdf" download> The Starter Guide </a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="http://resume.github.io/?sachinkrb" target="_blank" style="color:black"> Github Summary</a><br>
                     <i class="fa fa-check-circle-o"></i><a href="https://codepen.io/sachinsachin/#" target="_blank" style="color:black"> Codepen.io Account</a><br>
-                    <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/index2.html" target="_blank" style="color:black"> HTML/CSS Version of Resume </a><br>
-                    <i class="fa fa-check-circle-o"></i><a href="https://snrphotos.myportfolio.com" target="_blank" style="color:black"> Yes, I do Photography as a Hobby!</a><br><br>
+                    <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/index2.html" target="_blank" style="color:black"> Resume in HTML/CSS </a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="https://snrphotos.myportfolio.com" target="_blank" style="color:black">Photography Portfolio</a><br><br>
                     <h2><i class="fa fa-suitcase" style="color:  #5ABA5A"></i> Work Experience</h2>
                     <hr>
                     <h5><b>LiveOps - Independent Contractor - Work From Home</b></h5>
@@ -163,7 +162,7 @@ body {
                     <hr>
                     <h5><b>United Health Group - Web Developer - Short-Term IT Contract Job</b></h5>
                     <h6><i class="fa fa-calendar "></i> <span> Feb 2017 - May 2017</span></h6>
-                    <p>Worked under agile methodology on redesigning old website. Grabbed knowledge about real web development tasks, recreated assigned pages, tested SQL queries and worked with fellow developers & QA team. Learned about Spring framework, Stage/Production server & other Web development/deployment tools. </p>
+                    <p>Worked under agile methodology on redesigning old website. Grabbed knowledge about real web development tasks, recreated assigned pages, tested SQL queries and worked with fellow developers & QA team. Learned about Spring framework, Maven build tool, Korn shell for batch processing, Stage/Production server & other Web development/deployment tools. </p>
                     <hr>
                     <h5><b>Support.com - Remote Services Technician - Work From Home</b></h5>
                     <h6><i class="fa fa-calendar "></i> Dec 2015 - Jan 2017</h6>
@@ -178,11 +177,11 @@ body {
                     <h6><i class="fa fa-calendar "></i> Forever</h6>
                     <p>Web Development/Programming ! Everything that I need to find in one place ! &#x1F603;</p>
                     <hr>
-                    <h5><b>Minnesota State University</b></h5>
+                    <h5><b>Minnesota State University, Mankato, MN</b></h5>
                     <h6><i class="fa fa-calendar "></i> 2005 - 2009</h6>
                     <p>Information Technology ( NOT A GRAD ! )</p>
                     <hr>
-                    <h5><b>Orchid Science College</b></h5>
+                    <h5><b>Orchid Science College, Bharatpur, NEPAL</b></h5>
                     <h6><i class="fa fa-calendar"></i> 2002 - 2004</h6>
                     <p>Physics, Chemistry, Biology & Mathematics</p>
                     
@@ -218,7 +217,7 @@ body {
                     <i class="fa fa-linkedin fa-stack-1x" style="color: #5ABA5A"></i>
                 </span></a>
             <p></p>
-            <p>" Understanding a concept is like getting done with learning to ride a bicycle. After a decade, you might completely forget what your first bicycle looked like or how you aced it but you will never forget how to balance any bicycle that easily. " - Sachin Rajbhandari :)</p>
+            <p>" Understanding a programming concept is like getting done with learning to ride a bicycle. You might completely forget what your first bicycle looked like or how you aced it but it gets easier the second time." - Sachin Rajbhandari :)</p>
             <p>Thank you for your precious time !</p>
         </footer>
     </div>
