--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ body {
                     </span>
                     <b>Current Status</b>
                     <p></p>
-                    <p>Full Stack Course - Open App Academy</p>                 
+                    <p>Learning Full Stack Courses</p>                 
                     <p>Targeting A Job with Good Project & Nice Pay &#128521;</p>
                     <hr><hr>
                     <!-- My Skills -->
@@ -132,7 +132,7 @@ body {
                     <p>English</p>
                     <p>Nepali</p>
                     <p>Hindi</p>
-                    <br><br>
+                    <br><br><br><br>
                 </div>
                 <!-- End Left Column -->
             </div>
@@ -149,8 +149,8 @@ body {
                     <i class="fa fa-check-circle-o"></i><a style=" color: black;" href="howtohtmlcss.pdf" download> The Starter Guide </a><br>
                     <i class="fa fa-check-circle-o"></i><a href="http://resume.github.io/?sachinkrb" target="_blank" style="color:black"> Github Summary</a><br>
                     <i class="fa fa-check-circle-o"></i><a href="https://codepen.io/sachinsachin/#" target="_blank" style="color:black"> Codepen.io Account</a><br>
-                    
-                    <i class="fa fa-check-circle-o"></i><a href="https://snrphotos.myportfolio.com" target="_blank" style="color:black"> Photography Portfolio</a><br><br>
+                    <i class="fa fa-check-circle-o"></i><a href="https://snrphotos.myportfolio.com" target="_blank" style="color:black"> Photography Portfolio</a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="https://www.youtube.com/channel/UCoKB8EdCafdNP82Xy72mTMQ/videos?view_as=subscriber" target="_blank" style="color:black"> YouTube</a>
                     <h2><i class="fa fa-suitcase" style="color:  #5ABA5A"></i> Work Experience</h2>
                     <hr>
                     <h5><b>LiveOps - Independent Contractor - Work From Home</b></h5>
@@ -171,12 +171,12 @@ body {
                     <hr>
                     <h5><b>Academic Computer Center - University IT Support</b></h5>
                     <h6><i class="fa fa-calendar "></i> Nov 2007 - May 2009</h6>
-                    <p>Assisted in deployment, configuration, software troubleshooting and updates of PCs, Macs, printers & scanners . Assisted students on working with various Microsoft products. Took training classes on Adobe Photoshop & Illustrator. </p><br>
+                    <p>Assisted in deployment, configuration, software troubleshooting and updates of PCs, Macs, printers & scanners . Assisted students on working with various Microsoft products. Took training classes on Adobe Photoshop & Illustrator. </p>
                     <h2><i class="fa fa-graduation-cap" style="color:  #5ABA5A"></i> Education</h2>
                     <hr>
                     <h5><b>Online Learning</b></h5>
                     <h6><i class="fa fa-calendar "></i> Forever</h6>
-                    <p>Web Development/Programming ! Everything that I need to find in one place ! &#x1F603;</p>
+                    <p>Web Development/Programming ! Everything that I need to find in one place !</p>
                     <hr>
                     <h5><b>Minnesota State University, Mankato, MN</b></h5>
                     <h6><i class="fa fa-calendar "></i> 2005 - 2009</h6>
