--- a/Learning_Grids/index.html
+++ b/Learning_Grids/index.html
@@ -19,7 +19,7 @@
 <body>
   <div class="wrapper">
     <div class="header">
-      <h1>Makeup By Rozee</h1>
+      <h1>Eyebrows By Rosie</h1>
     </div>
     <div class="navbar">
       <ul id="main_nav">
@@ -41,26 +41,26 @@
     <div class="section">
       <div class="row">
         <div class="column">
-          Fun Facts # 1 Women naturally tend to have darker lips and skin around the eyes. So, our brains subconsciously note that as a sign of femininity. The more color contrast between a woman’s eyes and lips and her skin tone, the more feminine, and thus evolutionary attractive, she is seen. Lipstick and eye shadow are makeup staples because they enhance those features.
+          Fun Facts # 1 Threading is a method of hair removal originating in Iran, India, Central Asia and China.[1] In more recent times it has gained popularity in Western countries, especially with a cosmetic application (particularly for removing/shaping eyebrows).
         </div>
         <div class="column">
-          Fun Facts # 2 Researchers showed the pictures of women’s faces ranging from zero makeup to fully made up and several in between to men and women and asked them to judge which photos were the most attractive. They found that, on average, women were rated the most attractive with 60% of the makeup they put on for a night out. In other words, most women wear so much makeup that it exceeds what is considered attractive. Another study found that when makeup is not overdone, it makes women appear more likeable, trustworthy and competent.
+          Fun Facts # 2 Threading allows for a more defined and precise shape and can create better definition for eyebrows. It is also used as a method of removing unwanted hair on the entire face and upper lip area. Threading is not a good method for removing hair on arms or legs, as the hair in those regions is typically quite coarse and there is too much to remove. 
         </div>
         <div class="column">
-          Fun Facts # 3 Research shows that foundation is the cosmetic that has the biggest impact on how women are perceived. This is especially important at work because research shows that women who wear makeup have higher earnings and promotion potential. Skin tone discolorations, tired eye bags and blemishes can make you look tired or sickly.
+          Fun Facts # 3 Advantages cited for eyebrow threading, as opposed to eyebrow waxing, include that it provides more precise control in shaping eyebrows, and that it is gentler on the skin. A disadvantage is that it can be painful, as several hairs are removed at once; however, this can be minimized if it is done correctly, i.e. with the right pressure.
         </div>
       </div>
     </div>
     <div class="footer">
-      <a href="#" class="fa fa-youtube"></a>
-      <a href="#" class="fa fa-instagram"></a>
-      <a href="#" class="fa fa-facebook"></a>
+      <a href="https://www.instagram.com/eyebrowsbyrosie/" class="fa fa-instagram"></a>
+      <a href="https://www.facebook.com/browsbyrosiee" class="fa fa-facebook"></a>
       <a href="#" class="fa fa-pinterest"></a>
+      <a href="#" class="fa fa-youtube"></a>
       <a href="#" class="fa fa-snapchat-ghost"></a>
       <div class="info-here">
-        <p>Contact : Rozee Shrestha</p>
-        <p>Phone : 1(123)-456-7890</p>
-        <p>Email : makeupbyrozy@comingsoon.com</p>
+        <p>Contact : Rosie Shrestha</p>
+        <p>Phone : 512-696-5267</p>
+        <p>Email : eyebrowsbyrozee@gmail.com</p>
       </div>
     </div>
   </div>
