--- a/index.html
+++ b/index.html
@@ -141,12 +141,12 @@ body {
                 <div class="well">
                     <h2><i class="fa fa-cubes" style="color:  #5ABA5A"></i>Portfolio Hyperlinks</h2>
                     <hr>
-                    <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/index3.html" style="color:black"> Website Prototype I</a><br>
-                    <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/Learning_Grids/index.html" style="color:black"> Website Prototype II</a><br>
-                    <i class="fa fa-check-circle-o"></i><a href="http://linuxchats.com/" target="_blank" style="color:black"> Wordpress Website III</a><br>
-                    <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/index2.html" target="_blank" style="color:black"> Resume in HTML/CSS </a><br>
-                    <i class="fa fa-check-circle-o"></i><a href="skeleton-test/index.html" target="_blank" style="color:black"> Helpful Collection</a><br>
-                    <i class="fa fa-check-circle-o"></i><a style=" color: black;" href="howtohtmlcss.pdf" download> The Starter Guide </a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/index3.html" style="color:black">Sample Website I</a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/Learning_Grids/index.html" style="color:black">Sample Website II</a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="http://linuxchats.com/" target="_blank" style="color:black"> Wordpress Sample Website III</a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/index2.html" target="_blank" style="color:black"> Resume in HTML/CSS Format</a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="skeleton-test/index.html" target="_blank" style="color:black"> Reserached & Collected Links</a><br>
+                    <i class="fa fa-check-circle-o"></i><a style=" color: black;" href="howtohtmlcss.pdf" download> How to CSS any Website</a><br>
                     <i class="fa fa-check-circle-o"></i><a href="http://resume.github.io/?sachinkrb" target="_blank" style="color:black"> Github Summary</a><br>
                     <i class="fa fa-check-circle-o"></i><a href="https://codepen.io/sachinsachin/#" target="_blank" style="color:black"> Codepen.io Account</a><br>
                     <i class="fa fa-check-circle-o"></i><a href="https://snrphotos.myportfolio.com" target="_blank" style="color:black"> Photography Portfolio</a><br>
