--- a/index2.html
+++ b/index2.html
@@ -256,13 +256,12 @@
                                 <hr>
                                 <ul>
                                     <li>HTML</li>
-                                    <li>CSS, Bootstrap & Sass</li>
-                                    <li>JavaScript</li>
-                                    <li>Node.js</li>
-                                    <li>PostgreSQL</li>
-                                    <li>Java</li>
-                                    <li>Python & Django</li>
-                                    <li>Git & GitHub</li>
+                                    <li>CSS/Bootstrap/Sass</li>
+                                    <li>JS/jQuery/JSON/Node.js</li>
+                                    <li>Java/JSP/Spring</li>
+                                    <li>MySQL/PostgreSQL</li>
+                                    <li>Python/Django</li> 
+                                    <li>Git/GitHub</li>
                                     <li>Lightroom & Photoshop</li>
                                 </ul>
                               
@@ -275,16 +274,14 @@
                                 <hr>
                                 <ul>
                                     <li>Ruby</li> 
-                                    <li>Maven</li>
-                                    <li>Grunt</li>
-                                    <li>PHP</li>                         
                                     <li>C++</li>
+                                    <li>PHP</li>
                                     <li>React.js</li>
                                     <li>AngularJS</li>
-                                    <li>jQuery</li>
-                                    <li>JSON & XML</li>
-                                    <li>Spring</li>
+                                    <li>XML</li>                                    
                                     <li>Hibernate</li>
+                                    <li>Maven</li>
+                                    <li>Grunt</li>
                                     <li>Korn Shell</li>
                                     <li>WordPress</li>
                                     <li>RHEL Commands</li>
@@ -316,15 +313,14 @@
                                 <ul>
                                     <li><a href="https://sachinkrb.github.io/" target="_blank" style="color:black">Portfolio Website (sachinkrb.github.io)</a></li>
                                     
-                                    <li><a href="https://sachinkrb.github.io/index3.html" style="color:black">Website Prototype I</a></li>
-                                    <li><a href="https://sachinkrb.github.io/Learning_Grids/index.html" style="color:black">Website Prototype II</a></li>
-                                    <li><a href="http://linuxchats.com/" target="_blank" style="color:black">Wordpress Website III</a></li>
-                                    <li><a style=" color: black;" href="howtohtmlcss.pdf" download>The Starter Guide</a></li>
+                                    <li><a href="https://sachinkrb.github.io/index3.html" style="color:black">Sample Website I</a></li>
+                                    <li><a href="https://sachinkrb.github.io/Learning_Grids/index.html" style="color:black">Sample Website II</a></li>
+                                    <li><a href="http://linuxchats.com/" target="_blank" style="color:black">Wordpress Sample Website III</a></li>
+                                    <li><a style=" color: black;" href="howtohtmlcss.pdf" download>How to CSS any Website</a></li>
                                     <li><a href="http://resume.github.io/?sachinkrb" target="_blank" style="color:black">Github Summary</a></li>                     
-                                    <li><a href="https://sachinkrb.github.io/skeleton-test/index.html" style="color:black">Helpful Collection</a></li>
-                                    <li><a href="https://codepen.io/sachinsachin/#" target="_blank" style="color:black">Codepen.io</a></li>
-                                    <li><a href="https://repl.it/@CiscoTest" target="_blank" style="color:black">Repl.it</a></li>
-                                    <li><a href="https://www.sololearn.com/Profile/3050404" target="_blank" style="color:black">Sololearn</a></li>                               
+                                    <li><a href="https://sachinkrb.github.io/skeleton-test/index.html" style="color:black">Researched & Collected Hyperlinks</a></li>
+                                    <li><a href="https://codepen.io/sachinsachin/#" target="_blank" style="color:black">Codepen.io Playground</a></li>                                    
+                                    <li><a href="https://www.sololearn.com/Profile/3050404" target="_blank" style="color:black">Sololearn Courses</a></li>                               
                                     <li><a href="https://snrphotos.myportfolio.com" target="_blank" style="color: black">Photography Portfolio</a></li>
                                     <li><a href="https://www.youtube.com/channel/UCoKB8EdCafdNP82Xy72mTMQ/videos?view_as=subscriber" target="_blank" style="color: black">YouTube</a></li>
 
@@ -339,9 +335,9 @@
                                     <p>August 2019 – Current</p>
                                 </hgroup>
                                 <ul>
-                                    <li>Working as an independent customer service contractor for Bath & Body Works and Nordstrom.</li>
-                                    <li>Resolving sales/accounts/post-sales issues.</li>
-                                    <li>Help customers order products on behalf of Bath & Body Works</li>
+                                    <li>Working as an independent customer service contractor for Bath & Body Works and Intuit Turbotax.</li>
+                                    <li>Resolving sales/accounts/post-sales issues & product expert support.</li>
+                                    <li>Help customers order products on behalf of Bath & Body Works & Intuit Turbotax.</li>
                                 </ul>
                             </article>
                             <article>
