--- a/index.html
+++ b/index.html
@@ -80,44 +80,44 @@ body {
                     <p></p>
                     <p>HTML, CSS, Javascript </p>
                     <div class="progress">
-                        <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:80%">
-                            80% Complete
+                        <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:90%">
+                            90% Confidence level
                         </div>
                     </div>
-                    <p> React , AJAX, jQuery, AngularJS</p>
+                    <p> AJAX, jQuery, JSON, Node.js</p>
                     <div class="progress">
                         <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:60%">
-                            60% Complete
+                            60% Confidence level
                         </div>
                     </div>
-                    <p>Java, Python, Django, PHP, PostgreSQL</p>
+                    <p>Java, Spring, JSP, PostgreSQL</p>
                     <div class="progress">
-                        <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:55%">
-                            55% Complete
+                        <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:75%">
+                            75% Confidence level
                         </div>
                     </div>
-                    <p>XML, JSON</p>
+                    <p>Python, Django</p>
                     <div class="progress">
-                        <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:70%">
-                            70% Complete
+                        <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:65%">
+                            65% Confidence level
                         </div>
                     </div>
-                    <p>WordPress, IDEs, Git, Cisco R&S, Other Dev Tools</p>
+                    <p>WordPress, IDEs, Git, CCNA, Chrome Dev Tool</p>
                     <div class="progress">
-                        <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:70%">
-                            70% Complete
+                        <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:80%">
+                            80% Confidence level
                         </div>
                     </div>
                     <p>Ubuntu, Mac, Windows, RHEL</p>
                     <div class="progress">
                         <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:80%">
-                            80% Complete
+                            80% Confidence level
                         </div>
                     </div>
                     <p>Lightroom & Photoshop</p>
                     <div class="progress">
-                        <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:70%">
-                            70% Complete
+                        <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:75%">
+                            75% Confidence level
                         </div>
                     </div>
                     <hr><hr>
