--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@ h6 {
 body {
     margin-top: 3%;
     margin-bottom: 2%;
-
     background-image: url("linen.png");
 
 }
@@ -38,10 +37,10 @@ body {
                 <div class="well">
                     <img src="test.jpg" class="img-responsive img-rounded" alt="Avatar">
                     <p>
-                        <center><a href="index2.html" class="btn btn-success btn-block" role="button">Web Resume - Click Here</a></center>
+                        <center><a href="index2.html" class="btn btn-success btn-block" role="button">View Web Resume</a></center>
                     </p>
                     <p>
-                        <center><a href="skeleton-test/index.html" class="btn btn-success btn-block" role="button">Reminder Links - Click Here</a></center>
+                        <center><a href="SachinsResume.pdf" class="btn btn-success btn-block" role="button">Download PDF Resume</a></center>
                     </p>
                     <h3>Sachin Rajbhandari</h3>
                     <span class="fa-stack">
@@ -59,7 +58,7 @@ body {
                         <i class="fa fa-phone fa-stack-1x" style="color: #5ABA5A"></i>
                     </span>
                     903-357-8963<br>
-                    <hr><hr>
+                    <hr>
                     
                     <!-- Currently Focused On -->
                     <span class="fa-stack">
@@ -68,9 +67,10 @@ body {
                     </span>
                     <b>Current Status</b>
                     <p></p>
-                    <p>Learning Full Stack Courses</p>                 
-                    <p>Targeting A Job with Good Project & Nice Pay &#128521;</p>
-                    <hr><hr>
+                    <p>Learning Full Stack Courses.</p>                 
+                    <p>Appetite for Research based project & nice pay. &#128521;</p>
+                    <p>Interested in Machine Learning Tasks.
+                    <hr>
                     <!-- My Skills -->
                     <span class="fa-stack">
                         <i class="fa fa-circle-thin fa-stack-2x"></i>
@@ -90,7 +90,13 @@ body {
                             60% Confidence level
                         </div>
                     </div>
-                    <p>Java, Spring, JSP, PostgreSQL</p>
+                    <p>Java, Spring, JSP</p>
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:75%">
+                            75% Confidence level
+                        </div>
+                    </div>
+                    <p>PostgreSQL, MySQL</p>
                     <div class="progress">
                         <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:75%">
                             75% Confidence level
@@ -102,13 +108,19 @@ body {
                             65% Confidence level
                         </div>
                     </div>
-                    <p>WordPress, IDEs, Git, CCNA, Chrome Dev Tool</p>
+                    <p>WordPress, Git, CCNA, RHEL</p>
                     <div class="progress">
                         <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:80%">
                             80% Confidence level
                         </div>
                     </div>
-                    <p>Ubuntu, Mac, Windows, RHEL</p>
+                    <p>Eclipse, VS Code, NetBeans, Chrome Dev Tools</p>
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:85%">
+                            85% Confidence level
+                        </div>
+                    </div>
+                    <p>Ubuntu, Mac, Windows</p>
                     <div class="progress">
                         <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:80%">
                             80% Confidence level
@@ -120,7 +132,7 @@ body {
                             75% Confidence level
                         </div>
                     </div>
-                    <hr><hr>
+                    <hr>
                     
                     <!-- Languages -->
                     <span class="fa-stack">
@@ -129,10 +141,8 @@ body {
                     </span>
                     <b>Languages</b>
                     <p></p>
-                    <p>English</p>
-                    <p>Nepali</p>
-                    <p>Hindi</p>
-                    <br><br><br><br>
+                    <p>English, Nepali, Hindi.</p>
+                   	<br><br>
                 </div>
                 <!-- End Left Column -->
             </div>
@@ -141,11 +151,11 @@ body {
                 <div class="well">
                     <h2><i class="fa fa-cubes" style="color:  #5ABA5A"></i>Portfolio Hyperlinks</h2>
                     <hr>
-                    <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/index3.html" style="color:black"> Sample Website I</a><br>
-                    <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/Learning_Grids/index.html" style="color:black"> Sample Website II</a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/index3.html" style="color:black"> RWD Sample Website I</a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/Learning_Grids/index.html" style="color:black"> RWD Sample Website II</a><br>
                     <i class="fa fa-check-circle-o"></i><a href="http://linuxchats.com/" target="_blank" style="color:black"> Wordpress Sample Website III</a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="skeleton-test/index.html" target="_blank" style="color:black"> Skeleton Sample Website IV</a><br>
                     <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/index2.html" target="_blank" style="color:black"> Resume in HTML/CSS Format</a><br>
-                    <i class="fa fa-check-circle-o"></i><a href="skeleton-test/index.html" target="_blank" style="color:black"> Reserached & Collected Links</a><br>
                     <i class="fa fa-check-circle-o"></i><a style=" color: black;" href="howtohtmlcss.pdf" download> How to CSS any Website</a><br>
                     <i class="fa fa-check-circle-o"></i><a href="http://resume.github.io/?sachinkrb" target="_blank" style="color:black"> Github Summary</a><br>
                     <i class="fa fa-check-circle-o"></i><a href="https://codepen.io/sachinsachin/#" target="_blank" style="color:black"> Codepen.io Account</a><br>
@@ -155,7 +165,7 @@ body {
                     <hr>
                     <h5><b>LiveOps - Independent Contractor - Work From Home</b></h5>
                     <h6><i class="fa fa-calendar "></i><span> July 2019 - Current</span></h6>
-                    <p>Working as an independent customer service contractor for Bath & Body Works with sales/account/post-sales issues.</p>
+                    <p>Working as an independent customer service contractor for Bath & Body Works with sales/account/post-sales issues. Working as Product Expert support contractor for Intuit TurboTax.</p>
                     <hr>
                     <h5><b>Teleperformance USA - Senior Apple Advisor - Work From Home</b></h5>
                     <h6><i class="fa fa-calendar "></i><span> Jul 2017 - June 2019</span></h6>
@@ -218,7 +228,7 @@ body {
                     <i class="fa fa-linkedin fa-stack-1x" style="color: #5ABA5A"></i>
                 </span></a>
             <p></p>
-            <p>" Understanding a programming concept is like getting done with learning to ride a bicycle. You might completely forget what your first bicycle looked like or how you aced it but it gets easier the second time." - Sachin Rajbhandari :)</p>
+            <p>" Understanding a programming concept is like getting done with learning to ride a bicycle. It gets easier the second time." - Sachin Rajbhandari :)</p>
             <p>Thank you for your precious time !</p>
         </footer>
     </div>
