--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@ body {
                 <div class="well">
                     <h2><i class="fa fa-cubes" style="color:  #5ABA5A"></i>Portfolio Hyperlinks</h2>
                     <hr>
-                    <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/index3.html" style="color:black"> RWD Sample Website I</a><br>
-                    <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/Learning_Grids/index.html" style="color:black"> RWD Sample Website II</a><br>
-                    <i class="fa fa-check-circle-o"></i><a href="http://linuxchats.com/" target="_blank" style="color:black"> Wordpress Sample Website III</a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/index3.html" target="_blank" style="color:black"> RWD Sample Website I</a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/Learning_Grids/index.html" target="_blank" style="color:black"> RWD Sample Website II</a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="https://linuxchats.com/" target="_blank" style="color:black"> Wordpress Sample Website III</a><br>
                     <i class="fa fa-check-circle-o"></i><a href="skeleton-test/index.html" target="_blank" style="color:black"> Skeleton Sample Website IV</a><br>
                     <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/index2.html" target="_blank" style="color:black"> Resume in HTML/CSS Format</a><br>
                     <i class="fa fa-check-circle-o"></i><a style=" color: black;" href="howtohtmlcss.pdf" download> How to CSS any Website</a><br>
