--- a/index2.html
+++ b/index2.html
@@ -252,7 +252,7 @@
                         <section class="resume-frame-3">
                             <h1>[ Highlighted Skills ]</h1>
                             <div>
-                                <h2><b>STUDIED EXTENSIVELY ABOUT</b> </h2>
+                                <h2><b>GOOD KNOWLEDGE OF</b> </h2>
                                 <hr>
                                 <ul>
                                     <li>HTML/Graphics</li>
