--- a/index2.html
+++ b/index2.html
@@ -311,14 +311,13 @@
                                 
                                 <ul>
                                     <li><a href="https://sachinkrb.github.io/" target="_blank" style="color:black">Bootstrap Portfolio Website (sachinkrb.github.io)</a></li>                                   
-                                    <li><a href="https://sachinkrb.github.io/index3.html" style="color:black">RWD Sample Website I</a></li>
-                                    <li><a href="https://sachinkrb.github.io/Learning_Grids/index.html" style="color:black">RWD Sample Website II</a></li>
-                                    <li><a href="http://linuxchats.com/" target="_blank" style="color:black">Wordpress Sample Website III</a></li>
-                                     <li><a href="https://sachinkrb.github.io/skeleton-test/index.html" style="color:black">Skeleton Sample Website IV</a></li>
-                                    <li><a style=" color: black;" href="howtohtmlcss.pdf" download>How to CSS any Website</a></li>
+                                    <li><a href="https://sachinkrb.github.io/index3.html" style="color:black">RWD Website I</a></li>
+                                    <li><a href="https://sachinkrb.github.io/Learning_Grids/index.html" style="color:black">RWD Website II</a></li>
+                                     <li><a href="https://sachinkrb.github.io/skeleton-test/index.html" style="color:black">Skeleton Framework Website III</a></li>
+                                    <li><a style=" color: black;" href="howtohtmlcss.pdf" download>How to CSS a Website</a></li>
                                     <li><a href="http://resume.github.io/?sachinkrb" target="_blank" style="color:black">Github Summary</a></li>                     
                                     <li><a href="https://codepen.io/sachinsachin/#" target="_blank" style="color:black">Codepen.io Playground</a></li>                                    
-                                    <li><a href="https://www.sololearn.com/Profile/3050404" target="_blank" style="color:black">Sololearn Accomplished Courses</a></li>                               
+                                    <li><a href="https://www.sololearn.com/Profile/3050404" target="_blank" style="color:black">Mini Courses</a></li>                               
                                     <li><a href="https://snrphotos.myportfolio.com" target="_blank" style="color: black">Photography Portfolio</a></li>
                                     <li><a href="https://www.youtube.com/channel/UCoKB8EdCafdNP82Xy72mTMQ/videos?view_as=subscriber" target="_blank" style="color: black">YouTube</a></li>
 
