--- a/index2.html
+++ b/index2.html
@@ -227,7 +227,7 @@
     <div style="outline:none" tabindex="-1" role="group">
         <!-- <div id="page"> -->
             <!-- <main id="container"> -->
-                <!-- <div id="myNav" class="overlay">
+                <div id="myNav" class="overlay">
                     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                     <div class="overlay-content">
                         <a href="">RESUME</a>
@@ -239,7 +239,7 @@
                         <a href="https://github.com/sachinkrb">MY GITHUB</a>
                     </div>
                 </div> 
-                <span style="font-size:30px; font-family: Poiret One; font-kerning: auto; font-weight: 900; color: #03ACEF; cursor:pointer" onclick="openNav()">&#9776; MENU - CLICK HERE</span> -->
+                <span style="font-size:30px; font-family: Poiret One; font-kerning: auto; font-weight: 900; color: #03ACEF; cursor:pointer" onclick="openNav()">&#9776; MENU - CLICK HERE</span>
                 <div class="resume-frame-1">
                     <header>
                         <h1>Sachin R.</h1>
