--- a/index2.html
+++ b/index2.html
@@ -374,30 +374,38 @@
                         </section>
                         <section>
                             <h1>Education</h1>
+                            
                             <article>
                                 <hgroup>
-                                    <h1>Orchid Science College, Bharatpur, NEPAL</h1>
-                                    <p>2002 - 2004</p>
+                                    <h1>University of the People (UoPeople) - Pasadena, CA </h1>
+                                    <p>2020 - Current</p>
                                 </hgroup>
                                 <ul>
-                                    <li>Physics, Chemistry, Biology & Mathematics</li>
+                                    <li>Associate Degree in Computer Science</li>
                                 </ul>
-                            </article>
-                            <article>
                                 <hgroup>
-                                    <h1>Minnesota State University (MNSU), Mankato, MN</h1>
+                                    <h1>Minnesota State University (MNSU) - Mankato, MN</h1>
                                     <p>2005 - 2009</p>
                                 </hgroup>
                                 <ul>
                                     <li>Information Technology (NOT A GRAD)</li>
                                 </ul>
+                                <article>
+                                <hgroup>
+                                    <h1>Orchid Science College - Bharatpur, NEPAL</h1>
+                                    <p>2002 - 2004</p>
+                                </hgroup>
+                                <ul>
+                                    <li>High School Diploma</li>
+                                </ul>
+                            </article>
                                 <hgroup>
                                     <h1>References</h1>
                                     
                                 </hgroup>
                                 <ul>
                                     <li>Chhabi Pachabhaiya-----------Drupal Engineer@Apple----------------------------chhabi@pachabhaiya.com---------469-386-7729</li>
-                                    <li>Dilip Paudel-----------------------Senior Software Engineer@SAP------------------dilip.paudel@sap.com---------------985-413-7771</li>
+                                    <li>Dilip Paudel-----------------------Software Engineer@SAP----------------------------dilip.paudel@sap.com---------------985-413-7771</li>
                                 </ul>
                             </article>
                         </section>
