--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ body {
                     <b>Languages</b>
                     <p></p>
                     <p>English, Nepali, Hindi.</p>
-                   	<br><br>
+                   	<br>
                 </div>
                 <!-- End Left Column -->
             </div>
@@ -183,9 +183,9 @@ body {
                     <p>Assisted in deployment, configuration, software troubleshooting and updates of PCs, Macs, printers & scanners . Assisted students on working with various Microsoft products. Took training classes on Adobe Photoshop & Illustrator. </p>
                     <h2><i class="fa fa-graduation-cap" style="color:  #5ABA5A"></i> Education</h2>
                     <hr>
-                    <h5><b>Online Learning</b></h5>
-                    <h6><i class="fa fa-calendar "></i> Forever</h6>
-                    <p>Web Development/Programming ! Everything that I need to find in one place !</p>
+                    <h5><b>University of the People, Pasadena, CA</b></h5>
+                    <h6><i class="fa fa-calendar"></i> 2020 - Current</h6>
+                    <p>Associate in Computer Science</p>
                     <hr>
                     <h5><b>Minnesota State University, Mankato, MN</b></h5>
                     <h6><i class="fa fa-calendar "></i> 2005 - 2009</h6>
@@ -193,7 +193,7 @@ body {
                     <hr>
                     <h5><b>Orchid Science College, Bharatpur, NEPAL</b></h5>
                     <h6><i class="fa fa-calendar"></i> 2002 - 2004</h6>
-                    <p>Physics, Chemistry, Biology & Mathematics</p>
+                    <p>High School Diploma</p>
                     
                 </div>
             </div>
